--- a/pipelight/PKGBUILD
+++ b/pipelight/PKGBUILD
@@ -2,22 +2,28 @@
 
 pkgname='pipelight'
 pkgver=1
-pkgrel=3
+pkgrel=4
 pkgdesc="A browser plugin which allows one to use windows only plugins inside Linux browser"
-url="https://launchpad.net/netflix-desktop/"
-arch=('x86_64')
+url="https://launchpad.net/pipelight"
+arch=('i686' 'x86_64')
 license=('LGPL')
 
 depends=('wine-silverlight' 'ttf-ms-fonts' 'wget')
+if [[ "$CARCH" == "x86_64" ]]; then
 makedepends=('mingw-w64-gcc')
+else
+makedepends=('mingw32-gcc')
+fi
 
-source=("https://bitbucket.org/mmueller2012/pipelight/get/master.tar.gz"
+source=("https://bitbucket.org/mmueller2012/pipelight/get/v0.1.tar.bz2"
   "wine-silverlight5.1-installer.exe::http://silverlight.dlservice.microsoft.com/download/B/3/C/B3CF6815-40B1-4E36-8746-C4A0381AD260/20513.00/runtime/Silverlight.exe"
   "wine-silverlight5.1-installer.install-script")
 
-md5sums=('SKIP'
+md5sums=('1027bbf2de406e81750d7350f47c5e73'
          '971894515dd26a26175883031521d8b3'
          '1b479698988fb02899669b4a6e523d5f')
+
+install=pipelight.install
 
 _prefix=/usr
 
