--- a/wine-silverlight/PKGBUILD
+++ b/wine-silverlight/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=1.7.0
 pkgrel=5
 pkgdesc="WINE patched with Microsoft Silverlight and Netflix compatibility."
 url="http://www.winehq.com"
-license=('LGPL')
+license=('LGPL2.1')
 arch=('x86_64' 'i686')
 install=wine-silverlight.install
 
