--- a/pipelight/PKGBUILD
+++ b/pipelight/PKGBUILD
@@ -3,7 +3,7 @@
 pkgname='pipelight'
 pkgver=1
 _relver=3
-pkgrel=14
+pkgrel=15
 #epoch=1
 pkgdesc="A browser plugin which allows one to use windows only plugins inside Linux browser"
 url="https://launchpad.net/pipelight"
@@ -108,7 +108,7 @@ package() {
   make -C $_srcdir PREFIX=$_prefix DESTDIR=$pkgdir install
   install -Dm644 wine-silverlight5.1-installer.exe ${pkgdir}/$_prefix/share/pipelight/.
   install -dm755 ${pkgdir}/usr/share/wine-silverlight/.
-  install -Dm755 wine-silverlight5.1-installer.install-script ${pkgdir}/usr/share/wine-silverlight/.
+# install -Dm755 wine-silverlight5.1-installer.install-script ${pkgdir}/usr/share/wine-silverlight/.
   install -Dm755 install-dependency-pipelight ${pkgdir}/usr/share/wine-silverlight/.
 
   if [[ $_compilepluginloader  == 0 ]]; then
