--- a/pipelight/PKGBUILD
+++ b/pipelight/PKGBUILD
@@ -2,8 +2,8 @@
 
 pkgname='pipelight'
 pkgver=1
-_relver=3
-pkgrel=16
+_relver=4
+pkgrel=17
 #epoch=1
 pkgdesc="A browser plugin which allows one to use windows only plugins inside Linux browser"
 url="https://launchpad.net/pipelight"
@@ -31,20 +31,14 @@ fi
 makedepends+=('cabextract')
 
 source=("https://bitbucket.org/mmueller2012/pipelight/get/v0.$pkgver-$_relver.tar.bz2"
-  "https://launchpad.net/pipelight/trunk/0.1/+download/pluginloader-prebuilt-v0.$pkgver-$_relver.tar.gz"
-  "wine-silverlight5.1-installer.exe::http://silverlight.dlservice.microsoft.com/download/B/3/C/B3CF6815-40B1-4E36-8746-C4A0381AD260/20513.00/runtime/Silverlight.exe"
-  "addlib.cab::http://download.microsoft.com/download/8/0/D/80D7E79D-C0E4-415A-BCCA-E229EAFE2679/dshow_nt.cab"
-  "install-dependency-pipelight")
+  "https://launchpad.net/pipelight/trunk/0.1/+download/pluginloader-prebuilt-v0.$pkgver-$_relver.tar.gz")
 
-md5sums=('ddc9a2d2c37e80353a0cd3eb9f6e29d0'
-         '9f64f839b5de974581012a50bf4ea688'
-         '971894515dd26a26175883031521d8b3'
-         '366d44b9e0f667dec11f9bc16f31cc79'
-         '7f771fa96cd7776688d68814879e543b')
+md5sums=('cf8bbec066a7475bcf5b92310609b3c2'
+         '65564d3e363d6be81c8f602133aa7afe')
 
 install=pipelight.install
 
-_srcdir=mmueller2012-pipelight-d7249e0ffaab
+_srcdir=mmueller2012-pipelight-927e48b6b1b9
 
 #this changes the install location for the pipelight executables
 _prefix=/usr
@@ -67,13 +61,13 @@ prepare() {
   sed -i '2 a\ CXXFLAGS        := -static-libgcc -static-libstdc++ $(CXXFLAGS)' Makefile
   popd
   pushd share
-  sed -i "25s|/opt/wine-compholio|$_wine|g" pipelight
+  sed -i "21s|/opt/wine-compholio|$_wine|g" pipelight
   sed -i "s|PLUGIN_LOADER_PATH|$_prefix/share/pipelight/pluginloader.exe|g" pipelight
   sed -i "s|wine-browser-installer|wine-silverlight|g" pipelight
-  sed -i "119s|wine-silverlight/install-dependency|wine-silverlight/install-dependency-pipelight|g" pipelight
+  sed -i "115s|wine-silverlight/install-dependency|wine-silverlight/install-dependency-pipelight|g" pipelight
 
   # embed bug fixed, this is no longer needed
-  #sed -i '76s|true|false|g' pipelight
+  #sed -i '109s|true|false|g' pipelight
 
   #in case you want to use 64bit wine, you would need this
   #if [[ "$CARCH" == "x86_64" ]]; then
@@ -83,17 +77,6 @@ prepare() {
   # this needs to change if you're using a custom prefix for wine-silverlight, will happen automatically if _wineprefix changed
   sed -i "30s|.wine-pipelight|$_wineprefix|g" pipelight
   popd
-  cd ..
-
-  _home='$HOME'/$_wineprefix
-  sed -i "1 a\WINE=$_wine/bin/wine" install-dependency-pipelight
-  sed -i "2 a\INSTDIR=$_prefix/share/pipelight" install-dependency-pipelight
-  sed -i "3 a\WINEPREFIX=$_home" install-dependency-pipelight
-  #if [[ "$CARCH" == "x86_64" ]]; then
-  #  sed -i 's|Files|Files (x86)|g' wine-silverlight5.1-installer.install-script
-  #fi
-
-  cabextract addlib.cab
   popd
 }
 
@@ -106,17 +89,13 @@ build() {
 
 package() {
   make -C $_srcdir PREFIX=$_prefix DESTDIR=$pkgdir install
-  install -Dm644 wine-silverlight5.1-installer.exe ${pkgdir}/$_prefix/share/pipelight/.
   install -dm755 ${pkgdir}/usr/share/wine-silverlight/.
-# install -Dm755 wine-silverlight5.1-installer.install-script ${pkgdir}/usr/share/wine-silverlight/.
-  install -Dm755 install-dependency-pipelight ${pkgdir}/usr/share/wine-silverlight/.
+  install -Dm755 ${_srcdir}/misc/install-dependency ${pkgdir}/usr/share/wine-silverlight/install-dependency-pipelight
 
   if [[ $_compilepluginloader  == 0 ]]; then
     install -Dm644 l*.dll ${pkgdir}/$_prefix/share/pipelight/.
     install -Dm644 pluginloader.exe ${pkgdir}/$_prefix/share/pipelight/.
   fi
-
-  install -Dm644 mpg2splt.ax ${pkgdir}/$_prefix/share/pipelight/.
 }
 
 # vim:set ts=2 sw=2 et:
