--- a/nvidia-beta-dkms/PKGBUILD
+++ b/nvidia-beta-dkms/PKGBUILD
@@ -5,12 +5,12 @@
 # Contributor: sl1pkn07 <sl1pkn07 at gmail dot com>
 
 pkgname=nvidia-beta-dkms
-pkgver=331.38
-pkgrel=4
+pkgver=334.16
+pkgrel=1
 pkgdesc="NVIDIA kernel module sources (DKMS) - BETA version"
 arch=('i686' 'x86_64')
-[[ $CARCH == i686 ]] && _arch=x86 && _pkg=NVIDIA-Linux-${_arch}-${pkgver} && md5sums=('16aa229f7f118c8cafad6fb3f4ac082e')
-[[ $CARCH == x86_64 ]] && _arch=x86_64 && _pkg=NVIDIA-Linux-${_arch}-${pkgver}-no-compat32 && md5sums=('f2059ae373665cb6c8fb826e1173b04d')
+[[ $CARCH == i686 ]] && _arch=x86 && _pkg=NVIDIA-Linux-${_arch}-${pkgver} && md5sums=('2503a9ce1c17154099b2bfbdde86caf7')
+[[ $CARCH == x86_64 ]] && _arch=x86_64 && _pkg=NVIDIA-Linux-${_arch}-${pkgver}-no-compat32 && md5sums=('54be06165c88cda2235c2c7eee7a2575')
 url="http://www.nvidia.com/"
 license=('custom')
 depends=('dkms' 'linux>=3.7' 'linux<3.14' "nvidia-utils-beta>=${pkgver}")
@@ -32,7 +32,7 @@ prepare() {
   fi
   sh ${_pkg}.run --extract-only
   pushd ${_pkg}/kernel
-  patch -Np2 -i "${srcdir}"/nvidia-3.14.patch
+  #patch -Np2 -i "${srcdir}"/nvidia-3.14.patch
   cat uvm/dkms.conf.fragment >> dkms.conf
   popd
   popd
