--- a/pipelight/PKGBUILD
+++ b/pipelight/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Anish Bhatt anish [at] gatech [dot] edu
 
 pkgname='pipelight'
-pkgver=0.2.4.2
+pkgver=0.2.5
 pkgrel=1
 epoch=1
 pkgdesc="A browser plugin which allows one to use windows only plugins inside Linux browser"
@@ -35,14 +35,14 @@ makedepends+=('cabextract' 'xz')
 #source=("https://bitbucket.org/mmueller2012/pipelight/get/v${pkgver%.*}-${pkgver##*.}.tar.bz2"
 #  "https://launchpad.net/pipelight/trunk/0.1/+download/pluginloader-prebuilt-v${pkgver%.*}-${pkgver##*.}.tar.gz")
 source=("https://bitbucket.org/mmueller2012/pipelight/get/v${pkgver}.tar.bz2"
-  "https://launchpad.net/pipelight/trunk/${pkgver%.*.*}/+download/pluginloader-prebuilt-v${pkgver}.tar.xz")
+  "http://repos.fds-team.de/pluginloader/v${pkgver}/pluginloader.tar.gz")
 
-md5sums=('e6f4dcc26ad929ef110c6e741796030f'
-         '146cfda90ea5514d2822c0c59ce7ee7f')
+md5sums=('56f6ede3bafa9f2e5cf72bf087a98315'
+         '029be1ca83633ffa87ef96e6fcf5f9c5')
 
 install=pipelight.install
 
-_srcdir=mmueller2012-pipelight-851cf1925536
+_srcdir=mmueller2012-pipelight-035090b504f5
 
 #this changes the install location for the pipelight executables
 _prefix=/usr
@@ -57,13 +57,13 @@ prepare() {
   #The next two lines can't be used if you want to compile your own pluginloader.exe
   if [[ $_compilepluginloader == 0 ]]; then
   #  sed -i '1s| src/windows||g' Makefile
-    sed -i '42d' Makefile
+    sed -i '48d' Makefile
   fi
 
   pushd src/windows
   sed -i '2 a\ CXXFLAGS        := -static-libgcc -static-libstdc++ $(CXXFLAGS)' Makefile
   popd
-  pushd plugin-configs
+  pushd share/configs/
   sed -i '50s|^gccRun|#gccRun|g' pipelight-*
   sed -i "118s|wine-silverlight/install-dependency|wine-silverlight/install-dependency-pipelight|g" pipelight-*
 
@@ -98,6 +98,9 @@ package() {
     install -Dm644 pluginloader.exe ${pkgdir}/$_prefix/share/pipelight/.
   fi
 # All plugin creation has now been moved to pipelight.install
+
+# fix man page flags
+  chmod 0644 ${pkgdir}/usr/share/man/man1/pipelight-plugin.1
 }
 
 # vim:set ts=2 sw=2 et:
