--- a/pipelight/PKGBUILD
+++ b/pipelight/PKGBUILD
@@ -2,14 +2,15 @@
 
 pkgname='pipelight'
 pkgver=0.2.5
-pkgrel=2
+pkgrel=3
 epoch=1
 pkgdesc="A browser plugin which allows one to use windows only plugins inside Linux browser"
 url="https://launchpad.net/pipelight"
 arch=('i686' 'x86_64')
 license=('GPL2' 'LGPL2.1' 'MPL')
 
-depends=('wine-silverlight>=1.7.11-1' 'ttf-ms-fonts' 'wget')
+# wine-compholio is provided for example by wine-silverlight
+depends=('wine-compholio' 'ttf-ms-fonts' 'wget')
 if  [[ "$CARCH" == "x86_64" ]]; then
   depends+=('lib32-libsm' 'lib32-libgl')
 else
@@ -48,7 +49,7 @@ _srcdir=mmueller2012-pipelight-035090b504f5
 _prefix=/usr
 
 #change this if your wine-silverlight is installed elsewhere, or if you prefer a different wine directory
-_wine=/usr
+_wine=/opt/wine-compholio
 
 prepare() {
   pushd $_srcdir
