--- a/pipelight/PKGBUILD
+++ b/pipelight/PKGBUILD
@@ -37,6 +37,7 @@ makedepends+=('cabextract' 'xz')
 #  "https://launchpad.net/pipelight/trunk/0.1/+download/pluginloader-prebuilt-v${pkgver%.*}-${pkgver##*.}.tar.gz")
 source=("https://bitbucket.org/mmueller2012/pipelight/get/v${pkgver}.tar.bz2"
   "http://repos.fds-team.de/pluginloader/v${pkgver}/pluginloader.tar.gz")
+noextract=("pluginloader.tar.gz")
 
 md5sums=('56f6ede3bafa9f2e5cf72bf087a98315'
          '029be1ca83633ffa87ef96e6fcf5f9c5')
@@ -53,35 +54,18 @@ _wine=/opt/wine-compholio
 
 prepare() {
   pushd $_srcdir
-
-  #The next two lines can't be used if you want to compile your own pluginloader.exe
   if [[ $_compilepluginloader == 0 ]]; then
-  #  sed -i '1s| src/windows||g' Makefile
-    sed -i '48d' Makefile
+    tar xvzf ../pluginloader.tar.gz
   fi
-
-  pushd src/windows
-  sed -i '2 a\ CXXFLAGS        := -static-libgcc -static-libstdc++ $(CXXFLAGS)' Makefile
-  popd
-  pushd share/configs/
-  sed -i '50s|^gccRun|#gccRun|g' pipelight-*
-  sed -i "118s|wine-silverlight/install-dependency|wine-silverlight/install-dependency-pipelight|g" pipelight-*
-
-  #in case you want to use 64bit wine, you would need this
-  #if [[ "$CARCH" == "x86_64" ]]; then
-  #  sed -i 's|Files|Files (x86)|g' pipelight
-  #fi
-
-  popd
   popd
 }
 
 build() {
   pushd $_srcdir
   if [[ $_compilepluginloader == 0 ]]; then
-    ./configure --prefix=$_prefix --wine-path=$_wine/bin/wine --win32-prebuilt
+    ./configure --prefix=$_prefix --wine-path=$_wine/bin/wine --gcc-runtime-dlls="" --win32-prebuilt
   else
-    ./configure --prefix=$_prefix --wine-path=$_wine/bin/wine --win32-static
+    ./configure --prefix=$_prefix --wine-path=$_wine/bin/wine --gcc-runtime-dlls="" --win32-static
   fi
   make
   popd
@@ -90,11 +74,6 @@ build() {
 package() {
   make -C $_srcdir PREFIX=$_prefix DESTDIR=$pkgdir install
 
-  if [[ $_compilepluginloader  == 0 ]]; then
-#   As of v0.2.1, pluginloader is always statically compiled, no longer needed
-#   install -Dm644 l*.dll ${pkgdir}/$_prefix/share/pipelight/.
-    install -Dm644 src/windows/pluginloader.exe ${pkgdir}/$_prefix/share/pipelight/.
-  fi
 # All plugin creation has now been moved to pipelight.install
 
 # fix man page flags
