Update piaware-git to 2.1.2.r0.g5a453da

--- a/piaware-git/PKGBUILD
+++ b/piaware-git/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=piaware-git
 _gitname=piaware
-pkgver=2.0.3.r7.g09f839c
+pkgver=2.1.2.r0.g5a453da
 pkgrel=1
 
 pkgdesc="Client-side package and programs for forwarding ADS-B data to FlightAware"
